--- a/index.html
+++ b/index.html
@@ -4,32 +4,40 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>amd-library-boilerplate by niftymonkey</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/niftymonkey/amd-library-boilerplate">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/niftymonkey/amd-library-boilerplate/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/niftymonkey/amd-library-boilerplate/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header>
-        <h1 class="header">amd-library-boilerplate</h1>
-        <p class="header"></p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/niftymonkey/amd-library-boilerplate/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/niftymonkey/amd-library-boilerplate/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/niftymonkey/amd-library-boilerplate">View On GitHub</a></li>
-        </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/niftymonkey">niftymonkey</a></p>
-
-
-      </header>
       <section>
+        <div id="title">
+          <h1>amd-library-boilerplate</h1>
+          <p></p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/niftymonkey">niftymonkey</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+        </div>
+
         <h2>Synopsis</h2>
 
 <p>This is an attempt to create an example boilerplate for modular web application development.  There have been a number
@@ -55,11 +63,9 @@ functionality, rather than library code structure.</p>
 
 <p>As a result, I have created this example project as a reference for myself for how to accomplish this. </p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
+
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    
   </body>
 </html>
